dex-auth/dex-ldap/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
      - name: openldap
        image: osixia/openldap
        ports:
          - containerPort: 389
          - containerPort: 636
      - name: phpldapadmin
        image: osixia/phpldapadmin
        ports:
          - containerPort: 80
