dex-auth/dex-ldap/base/virtualservice.yaml
# This config is gated on kiali upgrade to 0.21 from 0.16 in istio 1.1.6:
# https://github.com/kiali/kiali/issues/1154
# https://github.com/istio/istio/issues/11131
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ldap-admin
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ldap-admin/
    rewrite:
      uri: /
    route:
    - destination:
        host: ldap-admin.auth.svc.cluster.local
        port:
          number: 80
